API method tweaks for better Firebase integration
